--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs-extra": "^11.2.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
