--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@
 # Excluir el archivo de configuración de Nginx
 nginx.conf
 
-# Excluir la carpeta Datos completa
-Datos/
+
 
 # Excluir script de entrada
 setup.sh
@@ -23,3 +22,6 @@ Desktop.ini
 
 # Ignorar dependencias de Node.js
 node_modules/
+
+serverprueba.js
+
